2008-11-14  Sam Weinig  <sam@webkit.org>

        Reviewed by Eric Seidel.

        Remove unneeded forward declaration.

        * plugins/Plugin.h:

2008-11-14  Darin Fisher  <darin@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22251
        HTMLCanvasElement.cpp unnecessarily includes runtime/Interpreter.h

        * html/HTMLCanvasElement.cpp:

2008-11-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Simon Hausmann.

        Add new files from the Qt port to the build.

        * WebCore.pro:

2008-11-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Simon Hausmann.

        Made DatabaseTracker::hasEntryForOrigin() public. This allows the Qt
        port to apply a default quota only if there is no entry in the
        database for a given origin yet.

        * storage/DatabaseTracker.h:

2008-11-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Simon Hausmann.

        Make it possible to get the cache directory set in the application
        cache storage.

        * loader/appcache/ApplicationCacheStorage.cpp:
        (WebCore::ApplicationCacheStorage::cacheDirectory): Added.
        * loader/appcache/ApplicationCacheStorage.h:

2008-11-14  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Beth Dakin.

        <rdar://problem/4230923> "Make Plain Text" doesn't reset text alignment in single paragraph messages
        
        When applying block styles, we would add block properties to the body element, and Mail's
        Make Plain Text feature isn't equipped to remove those.  This could have been fixed on our side,
        but this change has the advantage that it fixes the bug on Tiger, where Mail does not plan future updates.
        
        We have code that puts the paragraphs that we're operating on into blocks of their own before
        adding or removing block properties from the blocks that enclose them.  We need to run this code 