@@ -2074,18 +2074,22 @@ void FrameLoader::setupForReplaceByMIMEType(const String& newMIMEType)
     activeDocumentLoader()->setupForReplaceByMIMEType(newMIMEType);
 }
 
-void FrameLoader::loadFrameRequestWithFormState(const FrameLoadRequest& request, bool lockHistory, Event* event, PassRefPtr<FormState> prpFormState)
+void FrameLoader::loadFrameRequestWithFormAndValues(const FrameLoadRequest& request, bool lockHistory, Event* event,
+    HTMLFormElement* submitForm, const HashMap<String, String>& formValues)
 {
-    RefPtr<FormState> formState = prpFormState;
+    RefPtr<FormState> formState;
+    if (submitForm)
+        formState = FormState::create(submitForm, formValues, m_frame);
+    
     KURL url = request.resourceRequest().url();
- 
+
     String referrer;
     String argsReferrer = request.resourceRequest().httpReferrer();
     if (!argsReferrer.isEmpty())
         referrer = argsReferrer;
     else
         referrer = m_outgoingReferrer;
- 
+
     ASSERT(frame()->document());
     if (url.protocolIs("file")) {
         if (!canLoad(url, String(), frame()->document()) && !canLoad(url, referrer)) {
@@ -2109,23 +2113,13 @@ void FrameLoader::loadFrameRequestWithFormState(const FrameLoadRequest& request,
             loadType = FrameLoadTypeStandard;    
     
         loadURL(request.resourceRequest().url(), referrer, request.frameName(), loadType, 
-            event, formState.release());
+                event, formState.release());
     } else
         loadPostRequest(request.resourceRequest(), referrer, request.frameName(), event, formState.release());
 
     if (targetFrame && targetFrame != m_frame)
         if (Page* page = targetFrame->page())
             page->chrome()->focus();
-}
-
-void FrameLoader::loadFrameRequestWithFormAndValues(const FrameLoadRequest& request, bool lockHistory, Event* event,
-    HTMLFormElement* submitForm, const HashMap<String, String>& formValues)
-{
-    RefPtr<FormState> formState;
-    if (submitForm)
-        formState = FormState::create(submitForm, formValues, m_frame);
-
-    loadFrameRequestWithFormState(request, lockHistory, event, formState.release());        
 }
 
 void FrameLoader::loadURL(const KURL& newURL, const String& referrer, const String& frameName, FrameLoadType newLoadType,
